add homepage reset password test

--- a/app/views/account/reset/ask.scala.html
+++ b/app/views/account/reset/ask.scala.html
@@ -19,9 +19,9 @@
                    <span class="input-group-addon">
                        <span class="glyphicon glyphicon-envelope"></span>
                    </span>
-                   <input class="form-control" placeholder="@Messages("email")" name="email" type="email" required="">
+                   <input class="form-control" placeholder="@Messages("email")" name="email" type="email" required="" id="input_email_reset">
                </div>
-               <button type="submit" class="btn btn-primary btn-block">
+               <button type="submit" class="btn btn-primary btn-block" id="reset_password_button">
                    Continue
                </button>
            </fieldset>
