--- a/app/views/dashboard/dashboard.scala.html
+++ b/app/views/dashboard/dashboard.scala.html
@@ -67,7 +67,7 @@
           </div>
           <div id="message" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingThree">
             <div class="list-group">
-             <a href="@controllers.messages.routes.Messagecontrol.generateMessagehome()" class="list-group-item">@Messages("message.my")</a>
+             <a href="@controllers.messages.routes.Messagecontrol.generateMessagehome()" class="list-group-item" id="my_messages">@Messages("message.my")</a>
             </div>
           </div>
         </div>
