--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -7,6 +7,6 @@
         <input type="password" class="form-control" id="LoginPassword" name="password" placeholder="@Messages("password")">
     </div>
     <button type="submit" id="LoginButton" class="btn btn-success">@Messages("signin.signin")</button>
-    <small><a href="@controllers.account.routes.Reset.ask">@Messages("forgot.password")</a></small>
+    <small><a href="@controllers.account.routes.Reset.ask" id="reset_home_password">@Messages("forgot.password")</a></small>
 </form>
     </div>
