--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -22,7 +22,7 @@
             <ul class="list-inline list-unstyled">
               <li><span class="label label-primary">@Messages("lecture.contact")</span></li>
             @for(admin<-Semesteruser.findworkerByLecture(lecture.semester,lecture)){
-              <li><span><i class="fa fa-user"></i><a href="#" data-toggle="modal" data-target="#message@admin.userHash">@admin.firstname @admin.lastname</a></span></li>
+              <li><span><i class="fa fa-user"></i><a href="#" data-toggle="modal" data-target="#message@admin.userHash" id="open_conversation">@admin.firstname @admin.lastname</a></span></li>
               <li> </li>
                 <!-- message Modal -->
               <div class="modal fade" id="message@admin.userHash" tabindex="-1" role="dialog">
@@ -37,11 +37,11 @@
                         <div class="form-group">
                           <label class="control-label" for="textarea">@Messages("message.content")</label>
                           <div>
-                            <textarea required class="form-control" name="content" rows="5"></textarea>
+                            <textarea required class="form-control" name="content" rows="5" id="message_content"></textarea>
                           </div>
                         </div>
                         <div class="form-group">
-                          <input type="submit" class="btn btn-success pull-right">
+                          <input type="submit" class="btn btn-success pull-right" id="send_message_button">;
                         </div>
                       </form>
 
