--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -17,7 +17,7 @@
       </ul>
       <br/>
 
-      <p>Used Works:</p>
+      <p id="used_works">Used Works:</p>
 
       <ul>
         <li><a href="https://github.com/yesnault/PlayStartApp">PlayStartApp from Yesnault</a> as a basis for the login control</li>
