--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -40,7 +40,7 @@
                         <i class="fa fa-rocket"></i> HMS System
                     </a>
                     <ul class="nav navbar-nav navbar-right">
-                        <li class=""><a href="@routes.About.index()">@Messages("about")</a></li>
+                        <li class=""><a href="@routes.About.index()" id="about_page">@Messages("about")</a></li>
                     </ul>
                 </div>
                 <div class="navbar-collapse collapse">
