--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -211,13 +211,13 @@
                     </ul>
                   </div><!-- /btn-group -->
                 </div><!-- /input-group -->
-                <div class="label label-success col-md-12">@Messages("repo.last.status")</div>
+                <div class="label label-success col-md-12" id="remoterepo_exist">@Messages("repo.last.status")</div>
                 <canvas id="@semesteruser.userHash"></canvas>
                 <script type="text/javascript">
                    showcanvas('@semesteruser.email','@lecture.semester','@lecture.courseName','@semesteruser.userHash');
                   </script>
               }else{
-                <form action="@controllers.lectures.user.routes.Lecturehome.addRemoteRepotoLecture(semesteruser.lastname,lecture.semester,lecture.courseName)" method="post"><div class="alert alert-warning" role="alert">@Messages("lecture.home.homework.remote.noexist") </div><button class="btn btn-success pull-right" type="submit">@Messages("lecture.remote.generate")</button></form>
+                <form action="@controllers.lectures.user.routes.Lecturehome.addRemoteRepotoLecture(semesteruser.lastname,lecture.semester,lecture.courseName)" method="post"><div class="alert alert-warning" role="alert">@Messages("lecture.home.homework.remote.noexist") </div><button class="btn btn-success pull-right" type="submit" id="remoterepo_generate">@Messages("lecture.remote.generate")</button></form>
               }
 
                 <table class="table table-striped custab" id="remote_student_homework_table">
@@ -273,7 +273,7 @@
                 </table>
 
 
-                <a class="btn btn-danger pull-right" href="@controllers.lectures.user.routes.Lecturehome.deleteSemesteruserfromlecture(semesteruser.lastname,lecture.semester,lecture.courseName)">@Messages("lecture.leave")</a>
+                <a class="btn btn-danger pull-right" href="@controllers.lectures.user.routes.Lecturehome.deleteSemesteruserfromlecture(semesteruser.lastname,lecture.semester,lecture.courseName)"  id="remotelecture_deletestudent">@Messages("lecture.leave")</a>
 
               } else{
 
