student handin of local lecture are only allowed use zip file, zip file will be unpacked at server side and committed. student can download the corrected version later

--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -397,7 +397,7 @@
                           </td>
                           <td>@if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment)!=null){
                             @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).isevaluated){
-                              <a data-toggle="modal" data-target="#@assignment.id@stu.id" id="eval_result">@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).earndpoints/@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).totalpoints</a>
+                              <a data-toggle="modal" data-target="#eval@assignment.id@stu.id" id="eval_result">@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).earndpoints/@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).totalpoints</a>
                             }else{
                               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#eval@assignment.id@stu.id" id="add_eval_button">
                                 @Messages("evaluation.add")
