--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -129,7 +129,7 @@
 
                             <div class="form-group">
                               <label>@Messages("lecture.action.upload")</label>
-                              <input type="file" name="homeworkfile" id="homework_file">
+                              <input type="file" name="homeworkfile" id="homework_file" accept="application/zip">
                             </div>
                             <div class="form-group">
                               <label>@Messages("Assignment.commit")</label>
@@ -151,7 +151,7 @@
                           <h4 class="modal-title" id="myModalLabel">@Messages("Assignment.evaluation")</h4>
                         </div>
                         <div class="modal-body">
-                        @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment)!=null){
+                        @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment)!=null&&Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).isevaluated){
                             @for(exercise<- Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).exercises){
                               <div class="row">
                                 <div class="lable label-info text-center">@exercise.title</div>
@@ -160,7 +160,11 @@
                                 <blockquote class="col-xs-12"><p>@exercise.comments</p><footer>@Messages("comment")</footer></blockquote>
                               </div>
                             }
-                           <p class="textfont">@Messages("lecture.handin.marker")@if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).marker!=null){ @Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).marker.lastname,@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).marker.firstname}</p>
+                           <p class="textfont">@Messages("lecture.handin.marker")
+                             @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).marker!=null){
+                               @Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).marker.lastname,
+                               @Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).marker.firstname}</p>
+                          <a href="@controllers.lectures.routes.Lecturehub.getFeedBackFiles(lecture.semester,lecture.courseName,currentassignment.title)"><p class="textfont">@Messages("assignment.feedback.download")</p></a>
                         }else{<span class="alert alert-warning">@Messages("nohandin")</span>}
                         </div>
                       </div>
