--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -120,10 +120,6 @@
                     <form action="@controllers.lectures.admin.routes.Lecturehome.modifyassignment(currentassignment.id,lecture.semester,lecture.courseName)" method="post" enctype="multipart/form-data">
                       <div class="row">
                         <div class="col-xs-6">
-                          <label>@Messages("Number.exercise")</label>
-                          <input type="number" class="form-control" name="numberofexercise" value="@currentassignment.numberofexercise">
-                        </div>
-                        <div class="col-xs-6">
                           <label>@Messages("Number.totalpoints")</label>
                           <input type="number" class="form-control" name="totalpoints" value="@currentassignment.totalpoints">
                         </div>
@@ -212,10 +208,6 @@
                     <div class="modal-body">
                       <form action="@controllers.lectures.admin.routes.Lecturehome.modifyassignment(currentassignment.id,lecture.semester,lecture.courseName)" method="post" enctype="multipart/form-data">
                         <div class="row">
-                          <div class="col-xs-6">
-                            <label>@Messages("Number.exercise")</label>
-                            <input type="number" class="form-control" name="numberofexercise" value="@currentassignment.numberofexercise">
-                          </div>
                           <div class="col-xs-6">
                             <label>@Messages("Number.totalpoints")</label>
                             <input type="number" class="form-control" name="totalpoints" value="@currentassignment.totalpoints">
@@ -390,7 +382,7 @@
                             }else{
                             @if(controllers.lectures.admin.Assignmentevaluation.grandaccess(semesteruser,stu,lecture)){
                               @Messages("admin.access.student.true")}else{
-                              <div class="label label-danger">@Messages("admin.access.student.false")</div>
+                              <div class="label label-danger">@Messages("admin.access.student.false")</div>                               @*todo show current viewer add button grand access*@
                             }
                             }
                           }
@@ -415,29 +407,27 @@
                                   <h4 class="modal-title" id="myModalLabel">@Messages("homework.evaluation")_@stu.lastname _@assignment.title</h4>
                                 </div>
                                 <div class="modal-body">
-                             <form id="@assignment.title@stu.userHash" action="javascript:submit('@assignment.title@stu.userHash','@lecture.semester','@lecture.courseName','@assignment.id','@stu.email')">
+                             <form id="@assignment.title@stu.userHash" action="@controllers.lectures.admin.routes.Assignmentevaluation.addevaluation(lecture.semester,lecture.courseName,assignment.id,stu.email)" method="POST">
                                 @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment)!=null){
-                                 @for((exercise,index)<-Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).exercises.zipWithIndex){
-                                   <div class="label label-info center-block">@exercise.title</div>
+                                   <div class="label label-info center-block">@assignment.title</div>
                                    <div class="row">
                                      <div class="col-xs-1">
                                      <label>@Messages("gain")</label>
                                      </div>
                                   <div class="form-group col-xs-5">
-                                      <input type="number"  step="0.01" class="form-control" name="exercise[@index].earndpoints"  value="@exercise.earndpoints" id="earndpoints@index">
+                                      <input type="number"  step="0.01" class="form-control" name="pointsearnd"  value="@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).earndpoints" id="earndpoints_1">
                                     </div>
                                      <div class="col-xs-1">
                                      <label>@Messages("total")</label>
                                        </div>
                                     <div class="form-group col-xs-5">
-                                    <input type="number"  step="0.01" class="form-control" name="exercise[@index].totalpoints"  value="@exercise.totalpoints" id="totalpoints@index">
+                                    <input type="number"  step="0.01" class="form-control" value="@assignment.totalpoints" disabled="disabled">
                                     </div>
                                      <div class="col-xs-12">
-                                  <textarea class="form-control"  rows="3" placeholder="@Messages("comment")" name="exercise[@index].comments" id="comments@index">@exercise.comments</textarea>
+                                  <textarea class="form-control"  rows="3" placeholder="@Messages("comment")" name="evalcomments" id="comments_1">@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).comments</textarea>
                                      </div>
                                    </div>
                                    <hr>
-                               }
                                     <input class="btn btn-primary" type="submit" id="submit_eval">
                                 }
                                 </form>
@@ -672,10 +662,6 @@
         <div class="modal-body">
           <form action="@controllers.lectures.admin.routes.Lecturehome.addassignment(user.lastname,lecture.semester,lecture.courseName)" method="post" enctype="multipart/form-data">
             <div class="row">
-              <div class="col-xs-6">
-                <label>@Messages("Number.exercise")</label>
-                <input type="number" class="form-control" name="numberofexercise" id="number_exercise" >
-              </div>
               <div class="col-xs-6">
                 <label>@Messages("Number.totalpoints")</label>
                 <input type="number" class="form-control" name="totalpoints" id="total_points">
