--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -25,6 +25,9 @@
         <script src="@routes.Assets.at("javascripts/message/msgnotification.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/stickytab/jquery.stickytabs.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/stickytab/tabpersistance.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/clipboard/clipboard.min.js")" type="text/javascript"></script>
+
+
     </head>
     <body>
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -71,6 +74,7 @@
             <script src="@routes.Assets.at("javascripts/message/ng-websocket.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/message/messagecontrol.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/message/angular-ui-notification.min.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/clipboard/copytoclipboard.js")" type="text/javascript"></script>
         </div>
 
 
