--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -26,6 +26,7 @@
         <script src="@routes.Assets.at("javascripts/stickytab/jquery.stickytabs.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/stickytab/tabpersistance.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/clipboard/clipboard.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquery.cookie-1.4.1.min.js")" type="text/javascript"></script>
 
 
     </head>
