--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -364,7 +364,7 @@
                                 <div class="input-group-btn">
                                   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">@Messages("repo.eval.action") <span class="caret"></span></button>
                                   <ul class="dropdown-menu dropdown-menu-right">
-                                    <li><a class="ct" data-clipboard-text="@stu.getRepoByLecture(lecture).repopath" href="#editor">@Messages("repo.address.copy")</a></li>
+                                    <li><a class="ct" data-clipboard-text="@stu.getRepoByLecture(lecture).repopath" type="button">@Messages("repo.address.copy")</a></li>
                                     <li><a href="sourcetree://cloneRepo/@stu.getRepoByLecture(lecture).repopath">@Messages("repo.open.sourcetree")</a></li>
                                   </ul>
                                 </div><!-- /btn-group -->
